--- a/css/style.scss
+++ b/css/style.scss
@@ -618,6 +618,7 @@ header {
                     font-family: 'Inter';
                     font-size: 16px;
                 }
+                
             }
         }
          /* pagination koden = chat-gpt*/
@@ -724,6 +725,7 @@ header {
             justify-content: space-between;
             align-items: center;
         .text {
+            position: relative;
             text-align: left;
             padding-top: 60px;
             .red {
@@ -750,11 +752,13 @@ header {
         }
     }
     .content-image {
+        position: relative;
         display: flex;
         justify-content: center;
         padding-bottom: 20px;
 
         .info {
+            position: relative;
             padding: 20px;
             .small-title {
                 padding-top: 20px;
@@ -773,6 +777,25 @@ header {
                 padding-top: 20px;
                 font-family: 'Inter';
                 font-size: 16px;
+            }
+            .date {
+                position: absolute; 
+                top: 30px; 
+                left: 30px; 
+                background-color: #EDCF86;
+                width: 60px; 
+                height: 60px; 
+                text-align: center;
+
+                .day {
+                    font-family: 'DM+Sans';
+                    font-size: 22px;
+                    font-weight: 800;
+                }
+                .mon {
+                    font-family: 'Inter';
+                    font-size: 16px;
+                }
             }
         }     
     }
@@ -892,6 +915,8 @@ header {
     background-color: #0E1021;
     border-top: 1px dotted #F0EFE9;
     .container {
+        padding-top: 20px;
+        padding-bottom: 20px;
         display: flex;
         justify-content: space-between;
         .copyright {
@@ -916,4 +941,116 @@ header {
        
     }
 }  
+
+/* News */
+
+.showcase-title {
+    background-color: #F0EFE9;
+    .container {
+        padding-top: 120px;
+        padding-bottom: 100px;
+        .label {
+            display: flex;
+            justify-content: center;
+            .link {
+                padding-left: 10px;
+                font-family: 'Inter';
+                font-size: 16px;
+                color: #0E1021;
+                text-decoration: none;
+            }
+        }
+        .title {
+            font-family: 'DM+Sans';
+            font-size: 56px;
+            font-weight: 800;
+            text-align: center;
+        }
+    }
+}
+.news-articles {
+    padding-top: 100px;
+
+    .container {
+        .title {
+            padding-left: 5px;
+            font-family: 'DM+Sans';
+            font-size: 45px;
+            font-weight: 800;
+        }
+
+        .content {
+            position: relative;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            .info {
+                position: relative;
+                padding: 20px;
+                .small-title {
+                    padding-top: 20px;
+                    font-family: 'Inter';
+                    font-size: 16px;
+                }
+        
+                .title {
+                    font-family: 'DM+Sans';
+                    font-size: 22px;
+                    font-weight: 800;
+                    padding-top: 20px;
+                }
+        
+                .text {
+                    padding-top: 20px;
+                    font-family: 'Inter';
+                    font-size: 16px;
+                }
+                .date {
+                    position: absolute; 
+                    top: 37px; 
+                    left: 35px; 
+                    background-color: #EDCF86;
+                    width: 60px; 
+                    height: 60px; 
+                    text-align: center;
+    
+                    .day {
+                        font-family: 'DM+Sans';
+                        font-size: 22px;
+                        font-weight: 800;
+                    }
+                    .mon {
+                        font-family: 'Inter';
+                        font-size: 16px;
+                    }
+                }
+            }  
+        }
+        .pagination {
+            display: flex;
+            list-style: none;
+            padding: 0;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+            
+        }
+        .pagination li {
+            margin: 0 8px;
+        }
+        .pagination a {
+            text-decoration: none;
+            color: #191919;;
+            padding: 5px 10px;
+            border: 1px solid #191919;;
+            border-radius: 6px;
+            transition: background-color 0.3s, color 0.3s;
+
+            &:hover {
+                background-color: #191919;;
+                color: #F0EFE9;
+            }
+        }
+    }
+}
   
