--- a/css/style.css
+++ b/css/style.css
@@ -773,31 +773,31 @@ header .container .second-row .menu .link {
   padding-bottom: 20px;
 }
 
-.bottom {
+.footer-bottom {
   background-color: #0E1021;
   border-top: 1px dotted #F0EFE9;
 }
-.bottom .container {
+.footer-bottom .container {
   padding-top: 20px;
   padding-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
-.bottom .container .copyright {
+.footer-bottom .container .copyright {
   padding: 10px;
   font-family: "Inter";
   font-size: 16px;
   color: #F0EFE9;
 }
-.bottom .container .social {
+.footer-bottom .container .social {
   padding: 10px;
 }
-.bottom .container .social .social-media {
+.footer-bottom .container .social .social-media {
   margin-left: 15px;
   font-size: 1.3rem;
   color: #F0EFE9;
 }
-.bottom .container .social .social-media:hover {
+.footer-bottom .container .social .social-media:hover {
   color: #DAD9D3;
 }
 
@@ -901,4 +901,23 @@ header .container .second-row .menu .link {
 .news-articles .container .pagination a:hover {
   background-color: #191919;
   color: #F0EFE9;
+}
+
+/* contact */
+.contact-data {
+  padding-top: 50px;
+}
+.contact-data .container {
+  display: flex;
+  justify-content: space-between;
+}
+.contact-data .container .box {
+  border: 1px solid #0E1021;
+  height: 205px;
+  width: 420px;
+}
+
+.map iframe {
+  width: 100%;
+  height: 600px;
 }/*# sourceMappingURL=style.css.map */
