--- a/css/style.scss
+++ b/css/style.scss
@@ -911,7 +911,7 @@ header {
 
     }
 }
-.bottom {
+.footer-bottom {
     background-color: #0E1021;
     border-top: 1px dotted #F0EFE9;
     .container {
@@ -1053,4 +1053,29 @@ header {
         }
     }
 }
+
+/* contact */
+
+.contact-data {
+    padding-top: 50px;
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+
+        .box {
+            border: 1px solid #0E1021;
+            height: 205px;
+            width: 420px;
+
+        }
+    }
+}
+
+.map iframe {
+    width: 100%;
+    height: 600px;
+  }
+
+
   
