--- a/css/style.scss
+++ b/css/style.scss
@@ -1169,5 +1169,112 @@ header {
     height: 600px;
   }
 
+  /* Details */
+
+  .article {
+    margin-top: 50px;
+    .container {
+        .title {
+            font-family: 'DM+Sans';
+            font-size: 45px;
+            font-weight: 800;
+        }
+        .label {
+            display: flex;
+            justify-content: space-around;
+            max-width: 500px;
+
+            .text {
+                font-family: 'DM+Sans';
+                font-size: 20px;
+                font-weight: 500; 
+            }
+
+            li {
+                color:#f94d1c;
+            }
+        }
+        .content {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 50px;
+
+            .left {
+
+                max-width: 750px;
+
+                .text {
+                    padding-top: 40px;
+                    padding-bottom: 40px;
+
+                }
+            }
+
+            .right {
+                padding-bottom: 20px;
+                margin-left: 80px;
+
+                form {
+                    margin-bottom: 20px;
+                    .search-input {
+                        display: flex;
+                        align-items: center;
+                        background-color: #F0EFE9; 
+                        border-radius: 15px;
+                        padding: 5px;
+
+                    }
+        
+                    input[type="text"] {
+                        flex: 1; 
+                        border: none; 
+                        outline: none; 
+                        background-color: transparent
+                    }
+        
+                        i{
+                            margin-left: 15px;
+                            margin-right: 15px;
+                        }
+
+                }     
+
+            }
+            .box {
+                border: 1px solid #F0EFE9;
+                margin-top: 30px;
+
+
+                .title {
+                    font-family: 'DM+Sans';
+                    font-size: 22px;
+                    font-weight: 800; 
+                    padding-bottom: 15px;
+                    padding-right: 100px;
+                    padding-left: 40px;
+                }
+
+                .text {
+                    padding-left: 40px;
+
+                    .bold {
+                        font-family: 'DM+Sans';
+                        font-size: 16px;
+                        font-weight: 800;
+                        padding-right: 100px; 
+    
+                    }
+                    .light {
+                        font-size: 14px;
+                        border-bottom: 1px solid #F0EFE9;
+                        padding-right: 100px;
+                    }
+                }
+            }
+            
+        }
+    }
+  }
+
 
   
