--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@ html, body {
     border-color: 1px solid #F9D783;
     color: #191919;
     text-decoration: none;
-    padding: 8px 25px;
+    padding: 15px 30px;
     font-weight: 600;
     border-radius: 25px;
 
@@ -56,7 +56,7 @@ html, body {
     border: 1px solid #191919;
     color: #191919;
     text-decoration: none;
-    padding: 25px 35px;
+    padding: 15px 30px;
     font-weight: 600;
     border-radius: 25px;
 
@@ -165,6 +165,12 @@ header {
                 margin-right: 15px;
             }
         }
+        .button {
+            .btn-theme {
+                padding: 8px 15px;
+            }
+
+        }
 
     }
 }
@@ -177,16 +183,15 @@ header {
     .container{
         display: flex;
         justify-content: space-between;
-    }
+    
 
     .showcase-content {
-        padding:10px;
-
+        
         .showcase-title {
             font-family: 'DM+Sans';
             font-size: 96px;
             font-weight: 800;
-            align-items: center;
+            line-height: 1;
         }
 
         .showcase-text {
@@ -195,7 +200,10 @@ header {
         }
 
     }
+    
+    }
 }
+
 .logos {
 
     img {
@@ -223,14 +231,20 @@ header {
             font-family: 'DM+Sans';
             font-size: 45px;
             font-weight: 800;
-            color:#E4E4E4;
+            color: #191919;
             }
             .button {
-                margin-top: 20px;
-                width: 430px;
-                height: 56px;
-                border-radius: 30px;
-                background-color:#E4E4E4;
+                margin-top: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+
+                .btn-theme {    
+                    width: 430px;
+                    height: 56px;
+                    border-radius: 30px;
+                }
             }
         }
     }
@@ -856,6 +870,9 @@ header {
         form .btn-theme {
             padding: 15px 30px;
         }
+    }
+    img {
+        float: right;
     }
 }
 
